Refactor swap page to use useState instead of global store

--- a/src/pages/Swap/index.css
+++ b/src/pages/Swap/index.css
@@ -36,3 +36,9 @@
 .switch-circle:hover .switch-icon-onhover {
   display: inline;
 }
+
+.refresh-price {
+  font-size: 10px;
+  font-family: fontoed;
+  color: #858B9C;
+}
