--- a/src/components/Settings/index.css
+++ b/src/components/Settings/index.css
@@ -8,6 +8,10 @@
   right: 0;
   width: 264px;
   height: 137px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   background: white;
   box-shadow: 0px 0px 20px 0px rgba(17, 26, 52, 0.1);
   border-radius: 8px;
@@ -23,7 +27,7 @@
   padding-left: 8px;
   padding-right: 8px;
   padding-top: 4px;
-  padding-bottom: 2px;
+  padding-bottom: 4px;
 }
 .setting-btn-container:hover {
   background: #FCF0DC;
