Refine the swap page currency switch button

--- a/src/pages/Swap/index.css
+++ b/src/pages/Swap/index.css
@@ -13,11 +13,11 @@
 }
 
 .switch-circle:hover {
-  -ms-transform: rotate(90deg);
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  transform: rotate(90deg);
+  background: #FFEED0;
+}
+
+.switch-circle:active {
+  background: #FFE8BF;
 }
 
 .switch-icon {
