Update readme, refine ui, and fix hang during input swap amount

--- a/src/pages/Swap/index.css
+++ b/src/pages/Swap/index.css
@@ -26,6 +26,7 @@
   font-family: fontoed;
   color: #F99E3C;
   line-height: 20px;
+  font-size: 18px;
 }
 
 .switch-circle:hover .switch-icon-default,
