--- a/src/components/WalletComp/index.css
+++ b/src/components/WalletComp/index.css
@@ -22,7 +22,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 470px;
   color: #777;
   padding: 16px;
 }
@@ -97,6 +96,20 @@
   text-align: center;
 }
 
+.bottom-text-container {
+  font-size: 16px;
+  font-family: Helvetica;
+  color: #858B9C;
+  margin-top: 100px;
+  margin-bottom: 16px;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .bottom-text-right {
   color: #FF8212;
 }
@@ -112,10 +125,6 @@
   width: 20px;
   margin-right: 6px;
   margin-left: 4px;
-}
-
-.asset-content-width {
-  width: 528px;
 }
 
 .asset-account-container {
